gccida/c0/decode_g_option
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4480:1: error: must use 'enum' tag to refer to type 'debug_info_type'
debug_info_type v2; // [rsp+8h] [rbp-28h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4483:1: error: must use 'enum' tag to refer to type 'debug_info_type'
debug_info_type type; // [rsp+18h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4493:15: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( !*p || ( sch_istable[*( unsigned __int8 *)p] & 4) != 0 ) 
              ^~~~~~~~~~~
              _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4497:1: error: use of undeclared identifier 'decode_g_option_level'
decode_g_option_level = read_integral_parameter( p, 0LL, 4); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4501:6: error: use of undeclared identifier 'decode_g_option_level'; did you mean 'decode_g_option'?
if ( decode_g_option_level ) 
     ^~~~~~~~~~~~~~~~~~~~~
     decode_g_option
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4478:6: note: 'decode_g_option' declared here
int  decode_g_option( const char *arg) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4502:6: error: use of undeclared identifier 'decode_g_option_level'; did you mean 'decode_g_option'?
v3 = decode_g_option_level; 
     ^~~~~~~~~~~~~~~~~~~~~
     decode_g_option
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4478:6: note: 'decode_g_option' declared here
int  decode_g_option( const char *arg) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4505:1: error: use of undeclared identifier 'decode_g_option_level'
decode_g_option_level = v3; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4513:51: error: use of undeclared identifier 'decode_g_option_level'; did you mean 'decode_g_option'?
error( "use -gdwarf -g%d for DWARF v1, level %d", decode_g_option_level, decode_g_option_level); 
                                                  ^~~~~~~~~~~~~~~~~~~~~
                                                  decode_g_option
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4478:6: note: 'decode_g_option' declared here
int  decode_g_option( const char *arg) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4513:74: error: use of undeclared identifier 'decode_g_option_level'; did you mean 'decode_g_option'?
error( "use -gdwarf -g%d for DWARF v1, level %d", decode_g_option_level, decode_g_option_level); 
                                                                         ^~~~~~~~~~~~~~~~~~~~~
                                                                         decode_g_option
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4478:6: note: 'decode_g_option' declared here
int  decode_g_option( const char *arg) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4514:6: error: use of undeclared identifier 'decode_g_option_level'; did you mean 'decode_g_option'?
if ( decode_g_option_level == 2 ) 
     ^~~~~~~~~~~~~~~~~~~~~
     decode_g_option
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4478:6: note: 'decode_g_option' declared here
int  decode_g_option( const char *arg) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4519:6: error: use of undeclared identifier 'decode_g_option_level'; did you mean 'decode_g_option'?
if ( decode_g_option_level > 3 ) 
     ^~~~~~~~~~~~~~~~~~~~~
     decode_g_option
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4478:6: note: 'decode_g_option' declared here
int  decode_g_option( const char *arg) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4521:76: error: expected expression
warning( "ignoring option `%s' due to invalid debug level specification",  struct arg - 2); 
                                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4522:1: error: use of undeclared identifier 'decode_g_option_level'
decode_g_option_level = debug_info_level_0; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4522:25: error: use of undeclared identifier 'debug_info_level_0'; did you mean 'debug_info_level'?
decode_g_option_level = debug_info_level_0; 
                        ^~~~~~~~~~~~~~~~~~
                        debug_info_level
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:319:23: note: 'debug_info_level' declared here
enum debug_info_level debug_info_level = DINFO_LEVEL_NONE;
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4527:35: error: use of undeclared identifier 'off_89BFDE'
if ( da_len > 1 && !strncmp( arg, off_89BFDE, da_len) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4530:6: error: use of undeclared identifier 'decode_g_option_type_explicitly_set_p'
if ( decode_g_option_type_explicitly_set_p && da->debug_type && type != decode_g_option_selected_debug_type ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4530:73: error: use of undeclared identifier 'decode_g_option_selected_debug_type'
if ( decode_g_option_type_explicitly_set_p && da->debug_type && type != decode_g_option_selected_debug_type ) 
                                                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4534:2: error: expected expression
 struct arg - 2, 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/toplev.c:4535:1: error: use of undeclared identifier 'decode_g_option_debug_type_names'
decode_g_option_debug_type_names[decode_g_option_selected_debug_type]); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_g_option/src/obj/toplev.o] Error 1
